# grocy-barcode-scanner

./: .releaserc.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
grocy_barcode_scanner/: main.py
