[tool.poetry]
name = "grocy-barcode-scanner"
version = "0.1.0"
description = "Simple barcode scanner for Grocy with buzzer feedback"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.13.2"
gpiozero = "^2.0.1"
# Required by gpiozero
rpi-gpio = "^0.7.1"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
